--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".jonkheerAttractie"></activity>
+        <activity android:name=".Bankjes"></activity>
+        <activity android:name=".jonkheerAttractie" />
         <activity android:name=".Wachtrijen" />
         <activity android:name=".MainActivity">
             <intent-filter>
