--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.avans.b1project">
+
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,8 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".KortsteWachtrij"></activity>
+
         <service android:name="org.eclipse.paho.android.service.MqttService" />
-        <activity android:name=".Bankjes"></activity>
+
+        <activity android:name=".Bankjes" />
         <activity android:name=".jonkheerAttractie" />
         <activity android:name=".Wachtrijen" />
         <activity android:name=".MainActivity">
